<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appletlab.freshyjobs.About">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/appbar">

        <RelativeLayout
            android:id="@+id/appbar_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/appbar_default"/>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/privacy_policy_container"
        android:layout_below="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <TextView
            android:id="@+id/disclaimer_header"
            android:text="@string/disclaimer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <ScrollView
            android:id="@+id/scrollcontent"
            android:layout_below="@+id/disclaimer_header"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/disclaimer_content"
                    android:text="@string/disclaimer_content"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textSize="15dp"
                    android:lineSpacingExtra="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/disclaimer_term"
                    android:text="Terms"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:layout_below="@id/disclaimer_content"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:id="@+id/disclaimer_content2"
                    android:layout_below="@+id/disclaimer_term"
                    android:text="@string/disclaimer_content2"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textSize="15dp"
                    android:layout_marginBottom="20dp"
                    android:lineSpacingExtra="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/disclaimer_uselicense"
                    android:text="Use License"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:layout_below="@id/disclaimer_content2"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/disclaimer_content3"
                    android:layout_below="@+id/disclaimer_uselicense"
                    android:text="@string/disclaimer_content3"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textSize="15dp"
                    android:layout_marginBottom="20dp"
                    android:lineSpacingExtra="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/disclaimer_body"
                    android:text="Disclaimer"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:layout_below="@id/disclaimer_content3"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/disclaimer_content4"
                    android:layout_below="@+id/disclaimer_body"
                    android:text="@string/disclaimer_content4"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textSize="15dp"
                    android:layout_marginBottom="20dp"
                    android:lineSpacingExtra="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:id="@+id/disclaimer_csd"
                    android:text="Content Source Disclaimer"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:layout_below="@id/disclaimer_content4"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:id="@+id/disclaimer_content5"
                    android:layout_below="@+id/disclaimer_csd"
                    android:text="@string/disclaimer_content5"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textSize="15dp"
                    android:layout_marginBottom="20dp"
                    android:lineSpacingExtra="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>






            </RelativeLayout>


        </ScrollView>




    </RelativeLayout>






</RelativeLayout>